# OpenCA-SV

./: INSTALL  LICENSE  Makefile  Makefile.in  Makefile.orig  README  config.status  configure  configure.in
crypto/: Makefile  callback.c  sign.c  sign2nd.c  sign2nd_old.c  verify-tools.c  verify.c
docs/: sign
docs/man3/: OpenCA::sign.3  OpenCA::verify.3
include/openca/: callback.h  example.h  sign.h  sign2nd.h  sv.h  verify.h
perl-example/: prova.pl
src/: Makefile  sign.c  sv.c  tools.c  verify.c
test/: data  prova.pl  ver.sh
